# workshop-pyspark

./: .gitignore  README.md
urban_consumption/: README.md  pyproject.toml
urban_consumption/src/urban_consumption/: functions.py  main.py
urban_consumption/tests/: conftest.py  test_functions.py
urban_consumption/urban_consumption/: functions.py  main.py
