[tool.poetry]
name = "urban-consumption"
version = "0.1.0"
description = ""
authors = ["Ines Ben Ameur <ines.benameur@gnomondigital.com>"]
readme = "README.md"
packages = [{include = "urban_consumption", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.4.1"
pytest = "^7.4.0"
pyspark-test = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
